--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Backend application for image uploader",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
+    "build": "babel src -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,5 +16,9 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.0"
   }
 }
